fix permissões de cors e lista de caminhos publicos